--- a/download.html
+++ b/download.html
@@ -514,10 +514,18 @@ color:#fdf7a8;
 <span id="content_mlSub_lblSubmit" class="bodyHeading"></span>
     <div id="content_divML" class="themeDiv">
 	
+	
 		<td class="bodyData">
 		<a target="_blank" href="downloads/sf2mix.zip"> <img src="download.png" height="64" width="64" title="system" align="top"><font color="#0e0">SF2MIX</font> </a> 
 	    &nbsp;&nbsp;&nbsp; <font color="#FFF">/</font> &nbsp;&nbsp;&nbsp;
 		<a target="_blank" href="downloads/sf2ce.zip"> <font color="#ee0">SF2CE</font> </a> 
+	
+    	<br><font color="#0e0">Version 1.2</font> </a><br>
+		</td> 
+	
+		 <tr><td colspan="10" class="bodyTab">- Chun-Li (Double Kick) decreased strong projectile damage. </td></tr> <br>	
+		 <tr><td colspan="10" class="bodyTab">- Honda (Super Rage Zutsuki) fixed goes through Guile (Sonic Boom). </td></tr> <br>
+
 	
     	<br><font color="#0e0">Version 1.1</font> </a><br>
 		</td> 
