--- a/download_br.html
+++ b/download_br.html
@@ -518,6 +518,16 @@ color:#fdf7a8;
 	    &nbsp;&nbsp;&nbsp; <font color="#FFF">/</font> &nbsp;&nbsp;&nbsp;
 		<a target="_blank" href="downloads/sf2ce.zip"> <font color="#ee0">SF2CE</font> </a> 
 	
+    	<br><font color="#0e0">Versão 1.2</font> </a><br>
+		</td> 
+	
+		 <tr><td colspan="10" class="bodyTab">- Chun-Li (Double Kick) diminuído dano do projétil forte. </td></tr> <br>			 
+		 <tr><td colspan="10" class="bodyTab">- Honda (Super Rage Zutsuki) corrigido atravessar pelo Guile (Sonic Boom). </td></tr> <br>		 
+		 <tr><td colspan="10" class="bodyTab">- Zanguief (Quick Lariat) aumentado o dano. </td></tr> <br>		 
+		 <tr><td colspan="10" class="bodyTab">- Dhalsim Soco Fraco de perto deve ser defendido abaixado. </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Dhalsim (Double Yoga Fire) aumentado o dano. </td></tr> <br>		
+		
+	
     	<br><font color="#0e0">Versão 1.1</font> </a><br>
 		</td> 
 	
