--- a/index_br.html
+++ b/index_br.html
@@ -528,9 +528,26 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyTab"> Não produzido sobre licença da Capcom.</td></tr>
 			<tr><td colspan="10" class="bodyTab"> Distribuído gratuitamente e sem fins comerciais.</td></tr>
 			
-<script>
-document.write(unescape('%3C%74%72%3E%20%3C%74%64%3E%0A%09%09%3C%64%69%76%20%73%74%79%6C%65%3D%22%77%69%64%74%68%3A%36%34%30%70%78%3B%68%65%69%67%68%74%3A%34%38%30%70%78%3B%6D%61%78%2D%68%65%69%67%68%74%3A%31%30%30%25%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%64%69%76%20%69%64%3D%22%67%61%6D%65%22%3E%3C%62%72%3E%3C%2F%64%69%76%3E%0A%20%20%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%20%20%20%20%3C%73%63%72%69%70%74%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%45%4A%53%5F%70%6C%61%79%65%72%20%3D%20%22%23%67%61%6D%65%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%45%4A%53%5F%63%6F%72%65%20%3D%20%22%61%72%63%61%64%65%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%45%4A%53%5F%67%61%6D%65%4E%61%6D%65%20%3D%20%22%73%66%32%63%65%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%45%4A%53%5F%63%6F%6C%6F%72%20%3D%20%22%23%30%30%30%30%30%30%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%45%4A%53%5F%73%74%61%72%74%4F%6E%4C%6F%61%64%65%64%20%3D%20%74%72%75%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%45%4A%53%5F%67%61%6D%65%49%44%20%3D%20%22%37%37%37%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%45%4A%53%5F%73%74%61%72%74%4F%6E%4C%6F%61%64%65%64%20%3D%20%74%72%75%65%3B%0A%09%09%09%45%4A%53%5F%6F%6C%64%45%4A%53%4E%65%74%70%6C%61%79%53%65%72%76%65%72%20%3D%20%74%72%75%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%45%4A%53%5F%70%61%74%68%74%6F%64%61%74%61%20%3D%20%22%68%74%74%70%73%3A%2F%2F%72%61%77%63%64%6E%2E%67%69%74%68%61%63%6B%2E%63%6F%6D%2F%65%74%68%61%6E%61%6F%62%72%69%65%6E%2F%65%6D%75%6C%61%74%6F%72%6A%73%2F%6D%61%69%6E%2F%64%61%74%61%2F%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%45%4A%53%5F%67%61%6D%65%55%72%6C%20%3D%20%22%68%74%74%70%73%3A%2F%2F%73%66%32%6D%69%78%2E%67%69%74%68%75%62%2E%69%6F%2F%64%6F%77%6E%6C%6F%61%64%73%2F%73%66%32%63%65%2E%7A%69%70%22%3B%0A%20%20%20%20%20%20%20%20%3C%2F%73%63%72%69%70%74%3E%0A%20%20%20%20%20%20%20%20%3C%73%63%72%69%70%74%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%72%61%77%63%64%6E%2E%67%69%74%68%61%63%6B%2E%63%6F%6D%2F%65%74%68%61%6E%61%6F%62%72%69%65%6E%2F%65%6D%75%6C%61%74%6F%72%6A%73%2F%6D%61%69%6E%2F%64%61%74%61%2F%6C%6F%61%64%65%72%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%09%09%3C%2F%74%64%3E%3C%2F%74%72%3E%09'))
-</script>		
+		<tr> <td>
+		<div style="width:640px;height:480px;max-height:100%">
+            <div id="game"><br></div>
+        </div>
+        <script>
+            EJS_player = "#game";
+            EJS_core = "arcade";
+            EJS_gameName = "sf2ce";
+            EJS_color = "#000000";
+            EJS_startOnLoaded = true;
+            EJS_gameID = "333";
+            EJS_startOnLoaded = true;			
+            EJS_pathtodata = "https://rawcdn.githack.com/ethanaobrien/emulatorjs/main/data/";
+            EJS_gameUrl = "https://sf2mix.github.io/downloads/sf2ce.zip";
+        </script>
+        <script src="https://rawcdn.githack.com/ethanaobrien/emulatorjs/main/data/loader.js"></script>
+		</td></tr>	
+			
+        </tbody></table>
+		
 
 		 <!-- Summary -->
     <br>
