--- a/system.html
+++ b/system.html
@@ -73,7 +73,9 @@ td.header2 {
             <td id="masterHeader_rptHeader_tdMid_0" class="header"><a id="masterHeader_rptHeader_Hyperlink1_0" class="header" href="select.html">Select Screen</a></td>        
             <td id="masterHeader_rptHeader_tdMid_1" class="header"><a id="masterHeader_rptHeader_Hyperlink1_1" class="header" href="characters.html">Characters</a></td>
 			
-           <td id="masterHeader_rptHeader_tdMid_0" class="header"><a id="masterHeader_rptHeader_Hyperlink1_0" class="header" href="download.html">Download</a></td>        
+            <td id="masterHeader_rptHeader_tdMid_0" class="header"><a id="masterHeader_rptHeader_Hyperlink1_0" class="header" href="download.html">Download</a></td>
+			<td id="masterHeader_rptHeader_tdMid_0" class="header"><a id="masterHeader_rptHeader_Hyperlink1_0" class="header" href="play.html">Play Now</a></td> 		   
+			
 			
 		             
             <td style="padding:0px"><img id="masterHeader_rptHeader_imgFoot" src="chunli.gif" height="70" ></td></tr></tbody></table>
