--- a/download.html
+++ b/download.html
@@ -522,6 +522,40 @@ color:#fdf7a8;
 	    &nbsp;&nbsp;&nbsp; <font color="#FFF">/</font> &nbsp;&nbsp;&nbsp;
 		<a target="_blank" href="downloads/sf2ce.zip"> <font color="#ee0">SF2CE</font> </a> 
 	
+    	<br><font color="#0e0">Version 1.3</font> </a><br>
+		</td> 
+	
+		 <tr><td colspan="10" class="bodyTab">- Possibility to change characters during rounds by holding Start + corresponding button. </td></tr> <br>		 
+		 <tr><td colspan="10" class="bodyTab">- Decreased amount of Vigor lost when suffering any damage. </td></tr> <br>		 
+		 <tr><td colspan="10" class="bodyTab">- Escape from grabbed 1/3 bar of vigor. </td></tr> <br>			 
+		 <tr><td colspan="10" class="bodyTab">- P.guard Small recovery of Life + small recovery of Vigor. </td></tr> <br>		 
+		 <tr><td colspan="10" class="bodyTab">- Round start by default without random distances. </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Classic scenarios against the CPU by default. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Full Mode - added starting at random distances. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Classic Mode - disables character switching and Full mode. </td></tr> <br>		
+		 
+		 <br>
+		 <tr><td colspan="10" class="bodyTab">- Blanka - Second Roling Attack 1/5 vigor bar. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Blanka - Extra Hit to Strong Punch. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Guile - Vertical Sonic Boom with more angle. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Chun-Li - Spinning Bird Kick - acerto Extra Hit when lifting the legs up. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Zanguief - Quick lariat going further and with Extra Hit. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Dhalsim - Extra hit for Yoga Flame. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Dhalsim - hitbox increase for medium punch and high kick from close range. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Balrog - hitbox increase for weak punch down. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Balrog - You can fly hold ← → 2 chutes. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Vega - punch damage increase and weak strength lowered. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Vega - Elemental Fire Claw Extra Hit for hard punching in the air. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Sagat - 2 hits for Close-Up Power Kicks. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Sagat - Tiger Uppercut adjusted collision box for weak and medium. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Bison - Air Psychocrusher 1/5 vigor bar. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Bison - hitbox increase for hard punch down. </td></tr> <br><br>		
+	
+		<td class="bodyData">
+		<a target="_blank" href="downloads/1.2/sf2mix.zip"> <img src="download.png" height="64" width="64" title="system" align="top"><font color="#0e0">SF2MIX</font> </a> 
+	    &nbsp;&nbsp;&nbsp; <font color="#FFF">/</font> &nbsp;&nbsp;&nbsp;
+		<a target="_blank" href="downloads/1.2/sf2ce.zip"> <font color="#ee0">SF2CE</font> </a> 
+	
     	<br><font color="#0e0">Version 1.2</font> </a><br>
 		</td> 
 	
