--- a/download_br.html
+++ b/download_br.html
@@ -520,6 +520,42 @@ color:#fdf7a8;
 	    &nbsp;&nbsp;&nbsp; <font color="#FFF">/</font> &nbsp;&nbsp;&nbsp;
 		<a target="_blank" href="downloads/sf2ce.zip"> <font color="#ee0">SF2CE</font> </a> 
 	
+    	<br><font color="#0e0">Versão 1.3</font> </a><br>
+		</td> 
+	
+		 <tr><td colspan="10" class="bodyTab">- Possibilidade de trocar de personagem durante os rounds segurando Start + botão correspondente. </td></tr> <br>		 
+		 <tr><td colspan="10" class="bodyTab">- Diminuído quantidade perdida de Vigor ao sofrer qualquer dano. </td></tr> <br>		 
+		 <tr><td colspan="10" class="bodyTab">- Escapar de agarrada 1/3 barra de vigor. </td></tr> <br>			 
+		 <tr><td colspan="10" class="bodyTab">- P.guard Pequena recuperação de Vida + pequena recuperação de Vigor. </td></tr> <br>		 
+		 <tr><td colspan="10" class="bodyTab">- Inicio do Round por padrão sem distancias aleatórias. </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Cenários clássicos contra a CPU por padrão. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Modo Completo - adicionado começar em distancias aleatórias. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Modo Clássico - desabilita troca de personagens e o modo Completo. </td></tr> <br>		
+		 
+		 <br>
+		 <tr><td colspan="10" class="bodyTab">- Blanka - Second Roling Attack 1/5 vigor bar. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Blanka - Extra Hit para Soco forte. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Guile - Vertical Sonic Boom com mais ângulo. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Chun-Li - Spinning Bird Kick - acerto Extra Hit ao levantar as pernas para cima. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Zanguief - Quick lariat indo mais longe e com Extra Hit. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Dhalsim - Extra hit para Yoga Flame. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Dhalsim - aumento de hitbox para soco médio e chute forte de perto. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Balrog - aumento de hitbox para soco fraco abaixado. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Balrog - You can fly segura ← → 2 chutes. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Vega - aumento do dano do soco e forte fraco abaixado. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Vega - Elemental Fire Claw Extra Hit para soco forte no ar. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Sagat - 2 hits para Chute forte de perto. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Sagat - Tiger Uppercut ajustado collision box para fraco e médio. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Bison - Air Psychocrusher 1/5 vigor bar. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Bison - aumento de hitbox para soco forte abaixado. </td></tr> <br><br>		
+		
+	
+	
+		<td class="bodyData">
+		<a target="_blank" href="downloads/1.2/sf2mix.zip"> <img src="download.png" height="64" width="64" title="system" align="top"><font color="#0e0">SF2MIX</font> </a> 
+	    &nbsp;&nbsp;&nbsp; <font color="#FFF">/</font> &nbsp;&nbsp;&nbsp;
+		<a target="_blank" href="downloads/1.2/sf2ce.zip"> <font color="#ee0">SF2CE</font> </a> 
+	
     	<br><font color="#0e0">Versão 1.2</font> </a><br>
 		</td> 
 	
