--- a/selecao.html
+++ b/selecao.html
@@ -525,14 +525,16 @@ color:#fdf7a8;
 	
         <span id="content_ml_rptCommands_lblType_0" class="bodySection"></span><span id="content_ml_rptCommands_lblType_7" class="bodySection"></span><span id="content_ml_rptCommands_lblType_10" class="bodySection"></span><table style="width:1000px">
             <tbody>
+			<tr><td colspan="10" class="bodyTab">- Cor 1 - <font color="#0dc">Socos </font></td></tr>
+			<tr><td colspan="10" class="bodyTab">- Cor 2 - <font color="#0dc">Start </font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Cor 3 - <font color="#0dc">Chute Fraco </font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Cor 4 - <font color="#0dc">Chute Médio </font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Cor 5 - <font color="#0dc">Chute Forte </font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Modo Roleta - <font color="#0dc">segurar Cima ao escolher </font> <font color="#dd0"> (o personagem muda a cada luta diferente) </font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Random 1x - <font color="#0dc">3 socos</font> <font color="#dd0"> (randômico apenas uma vez) </font></td></tr> 
 			<tr><td colspan="10" class="bodyTab">- Modo Exibição - <font color="#0dc">3 chutes </font> <font color="#dd0"> (CPU x CPU) </font> </td></tr>
-			<tr><td colspan="10" class="bodyTab">- Modo Completo - <font color="#0dc">segurar Baixo ao escolher </font> <font color="#dd0">(Falso 3d, Carro na Índia, Cenários de bônus randômicos) </font> </td></tr>
-			<tr><td colspan="10" class="bodyTab">- Modo Clássico - <font color="#0dc">segurar Baixo + 3 chutes ao escolher </font> <font color="#dd0">(desabilita os cenários randômicos) </font> </td></tr>
+			<tr><td colspan="10" class="bodyTab">- Modo Completo - <font color="#0dc">segurar Baixo ao escolher </font> <font color="#dd0">(Falso 3d, Carro na Índia, Cenários de bônus randômicos, posição inicial randômica) </font> </td></tr>
+			<tr><td colspan="10" class="bodyTab">- Modo Clássico - <font color="#0dc">segurar Baixo + 3 chutes ao escolher </font> <font color="#dd0">(Desabilita troca de personagens durante os rounds, desabilita o modo Completo) </font> </td></tr>
 		
 			
         </tbody></table>
