--- a/select.html
+++ b/select.html
@@ -527,14 +527,16 @@ color:#fdf7a8;
 	
         <span id="content_ml_rptCommands_lblType_0" class="bodySection"></span><span id="content_ml_rptCommands_lblType_7" class="bodySection"></span><span id="content_ml_rptCommands_lblType_10" class="bodySection"></span><table style="width:1000px">
             <tbody>
+			<tr><td colspan="10" class="bodyTab">- Color 1 - <font color="#0dc">Punches </font></td></tr>
+			<tr><td colspan="10" class="bodyTab">- Color 2 - <font color="#0dc">Start </font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Color 3 - <font color="#0dc">Weak Kick </font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Color 4 - <font color="#0dc">Medium Kick </font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Color 5 - <font color="#0dc">Hard Kick </font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Random Mode - <font color="#0dc">holding UP </font> <font color="#dd0"> (random character and color at every fight) </font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Random 1x - <font color="#0dc">3 punches</font> <font color="#dd0"> (random only once) </font></td></tr> 
 			<tr><td colspan="10" class="bodyTab">- Exhibition Mode - <font color="#0dc">3 kicks </font> <font color="#dd0"> (CPU x CPU) </font> </td></tr>
-			<tr><td colspan="10" class="bodyTab">- Complete Mode - <font color="#0dc">holding DOWN </font> <font color="#dd0">(False 3d, car in India, Random bonus stages) </font> </td></tr>
-			<tr><td colspan="10" class="bodyTab">- Classic Mode - <font color="#0dc">holding DOWN + 3 kicks on the select screen</font> <font color="#dd0">(disables random stages) </font> </td></tr>
+			<tr><td colspan="10" class="bodyTab">- Complete Mode - <font color="#0dc">holding DOWN </font> <font color="#dd0">(False 3d, car in India, Random bonus stages, Random start position) </font> </td></tr>
+			<tr><td colspan="10" class="bodyTab">- Classic Mode - <font color="#0dc">holding DOWN + 3 kicks on the select screen</font> <font color="#dd0">(Disables character switching during rounds, disable Complete Mode) </font> </td></tr>
 					
         </tbody></table>
 		
