--- a/sistema.html
+++ b/sistema.html
@@ -539,16 +539,39 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyTab">- Quebra de Defesa <font color="#dd0">(G.CRUSH!)</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Defesa Perfeita: defender no último momento </td></tr>
 			<tr><td colspan="10" class="bodyTab">- Esquiva -> Start <font color="#dd0">(invencível no rolamento) </font></td></tr>
-			<tr><td colspan="10" class="bodyTab">- Saida de Agarrões: Cima + qualquer botão ao ser agarrado <font color="#dd0">(usa 1/2 Barra de Vigor) </font></td></tr>
+			<tr><td colspan="10" class="bodyTab">- Saida de Agarrões: Cima + qualquer botão ao ser agarrado <font color="#dd0">(usa 1/3 Barra de Vigor) </font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Pulo Curto <font color="#dd0">(pular estando totalmente parado)</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Pulo longo <font color="#dd0">(rapidamente baixo -> cima)</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Corrida <font color="#dd0">(Frente + Frente)</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Recuar <font color="#dd0">(Trás + Trás)</font></td></tr>
+			<tr><td colspan="10" class="bodyTab">- Troca de Personagens entre os Round <font color="#dd0">(segurando Start + botão correspondente)</font></td></tr>
+			
+			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="ryu.png"> <img src="moves/lpunch.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="honda.png"> <img src="moves/mpunch.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="blanka.png"> <img src="moves/hpunch.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="guile.png"> <img src="moves/lkick.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="ken.png"> <img src="moves/mkick.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="chunli.png"> <img src="moves/hkick.png"></td></tr>
+						
+			<tr><td colspan="10" class="bodyTab"><img src="zanguief.png"> <img src="moves/up.png"> <img src="moves/lpunch.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="dhalsim.png"> <img src="moves/up.png"> <img src="moves/mpunch.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="balrog.png"> <img src="moves/up.png"> <img src="moves/hpunch.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="vega.png"> <img src="moves/up.png"> <img src="moves/lkick.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="sagat.png"> <img src="moves/up.png"> <img src="moves/mkick.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="bison.png"> <img src="moves/up.png"> <img src="moves/hkick.png"></td></tr>
+
+			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>
+			
 			<tr><td colspan="10" class="bodyTab">- Frases de Vitórias em <font color="#dd0"> PT-BR: </font> Habilitar, <font color="#dd0"> SW(A8) </font> CPS1 DIP Switch não utilizada</td></tr>
 			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-a8.png"> <img src="dip-a8.png" height="300"> </a></img></td></tr>
-			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Modo Completo: </font>Habilitar, <font color="#dd0"> SW(B4) </font> (Falso 3d, Carro na Índia, Cenários de bônus randômicos)</td></tr>
+			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>
+			
+			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Modo Completo: </font>Habilitar, <font color="#dd0"> SW(B4) </font> (Falso 3d, Carro na Índia, Cenários de bônus randômicos, posição inicial randômica)</td></tr>
 			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b4.png"> <img src="dip-b4.png" height="300"> </a></img></td></tr>	
-			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Modo Clássico: </font>Habilitar, <font color="#dd0"> SW(B5) </font> (Sem Cenários randômicos contra a CPU)</td></tr>
+			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>
+			
+			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Modo Clássico: </font>Habilitar, <font color="#dd0"> SW(B5) </font> (Desabilita troca de personagens durante os rounds, desabilita o modo Completo)</td></tr>
 			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b5.png"> <img src="dip-b5.png" height="300"></a> </img></td></tr>	
 			
 			
