--- a/system.html
+++ b/system.html
@@ -540,16 +540,39 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyTab">- Guard Crush <font color="#dd0">(G.CRUSH!)</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Perfect Guard: defend at the last moment </td></tr>
 			<tr><td colspan="10" class="bodyTab">- Escape -> Start <font color="#dd0">(invincible while rolling) </font></td></tr>
-			<tr><td colspan="10" class="bodyTab">- Grab Escape: Up + any button <font color="#dd0">(use 1/2 VigorBar) </font></td></tr>
+			<tr><td colspan="10" class="bodyTab">- Grab Escape: Up + any button <font color="#dd0">(use 1/3 VigorBar) </font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Short Jump <font color="#dd0"> (jump from IDLE State) </font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Long Jump <font color="#dd0"> (quickly down -> up)</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Run <font color="#dd0">(forward + forward)</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Backstep <font color="#dd0">(back + back)</font> </td></tr>
+			<tr><td colspan="10" class="bodyTab">- Character Swapping between Rounds <font color="#dd0">(by holding Start + corresponding button)</font></td></tr>
+						
+			<tr><td colspan="10" class="bodyTab"> &nbsp; </font></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="ryu.png"> <img src="moves/lpunch.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="honda.png"> <img src="moves/mpunch.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="blanka.png"> <img src="moves/hpunch.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="guile.png"> <img src="moves/lkick.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="ken.png"> <img src="moves/mkick.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="chunli.png"> <img src="moves/hkick.png"></td></tr>
+						
+			<tr><td colspan="10" class="bodyTab"><img src="zanguief.png"> <img src="moves/up.png"> <img src="moves/lpunch.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="dhalsim.png"> <img src="moves/up.png"> <img src="moves/mpunch.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="balrog.png"> <img src="moves/up.png"> <img src="moves/hpunch.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="vega.png"> <img src="moves/up.png"> <img src="moves/lkick.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="sagat.png"> <img src="moves/up.png"> <img src="moves/mkick.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab"><img src="bison.png"> <img src="moves/up.png"> <img src="moves/hkick.png"></td></tr>
+
+			<tr><td colspan="10" class="bodyTab"> &nbsp; </font></td></tr>
+			
 			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Portuguese </font>Win Quotes: Turn ON, <font color="#dd0"> SW(A8) </font> unused CPS1 DIP Switch</td></tr>
 			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-a8.png"> <img src="dip-a8.png" height="300"></a> </img></td></tr>
-			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Complete Mode: </font>Turn ON, <font color="#dd0"> SW(B4) </font> (False 3d, car in India, Random bonus stages)</td></tr>
+			<tr><td colspan="10" class="bodyTab"> &nbsp; </font></td></tr>
+			
+			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Complete Mode: </font>Turn ON, <font color="#dd0"> SW(B4) </font> (False 3d, car in India, Random bonus stages, random start position)</td></tr>
 			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b4.png"> <img src="dip-b4.png" height="300"> </a></img></td></tr>
-            <tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Classic Mode: </font>Turn ON, <font color="#dd0"> SW(B5) </font> (non-random stages against CPU)</td></tr>
+            <tr><td colspan="10" class="bodyTab"> &nbsp; </font></td></tr>
+			
+			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Classic Mode: </font>Turn ON, <font color="#dd0"> SW(B5) </font> (Disables character switching during rounds, disable Complete Mode)</td></tr>
 			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b5.png"> <img src="dip-b5.png" height="300"></a> </img></td></tr>				
 	
 			
