--- a/system.html
+++ b/system.html
@@ -74,7 +74,7 @@ td.header2 {
             <td id="masterHeader_rptHeader_tdMid_1" class="header"><a id="masterHeader_rptHeader_Hyperlink1_1" class="header" href="characters.html">Characters</a></td>
 			
             <td id="masterHeader_rptHeader_tdMid_0" class="header"><a id="masterHeader_rptHeader_Hyperlink1_0" class="header" href="download.html">Download</a></td>
-			<td id="masterHeader_rptHeader_tdMid_0" class="header"><a id="masterHeader_rptHeader_Hyperlink1_0" class="header" href="play.html">Play Now</a></td> 		   
+<!--			<td id="masterHeader_rptHeader_tdMid_0" class="header"><a id="masterHeader_rptHeader_Hyperlink1_0" class="header" href="play.html">Play Now</a></td> -->			   
 			
 			
 		             
@@ -547,7 +547,7 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyTab">- Backstep <font color="#dd0">(back + back)</font> </td></tr>
 			<tr><td colspan="10" class="bodyTab">- Character Swapping between Rounds <font color="#dd0">(by holding Start + corresponding button)</font></td></tr>
 						
-			<tr><td colspan="10" class="bodyTab"> &nbsp; </font></td></tr>
+			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>
 			<tr><td colspan="10" class="bodyTab"><img src="ryu.png"> <img src="moves/lpunch.png"></td></tr>
 			<tr><td colspan="10" class="bodyTab"><img src="honda.png"> <img src="moves/mpunch.png"></td></tr>
 			<tr><td colspan="10" class="bodyTab"><img src="blanka.png"> <img src="moves/hpunch.png"></td></tr>
@@ -562,15 +562,15 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyTab"><img src="sagat.png"> <img src="moves/up.png"> <img src="moves/mkick.png"></td></tr>
 			<tr><td colspan="10" class="bodyTab"><img src="bison.png"> <img src="moves/up.png"> <img src="moves/hkick.png"></td></tr>
 
-			<tr><td colspan="10" class="bodyTab"> &nbsp; </font></td></tr>
+			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>
 			
 			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Portuguese </font>Win Quotes: Turn ON, <font color="#dd0"> SW(A8) </font> unused CPS1 DIP Switch</td></tr>
 			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-a8.png"> <img src="dip-a8.png" height="300"></a> </img></td></tr>
-			<tr><td colspan="10" class="bodyTab"> &nbsp; </font></td></tr>
+			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>
 			
 			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Complete Mode: </font>Turn ON, <font color="#dd0"> SW(B4) </font> (False 3d, car in India, Random bonus stages, random start position)</td></tr>
 			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b4.png"> <img src="dip-b4.png" height="300"> </a></img></td></tr>
-            <tr><td colspan="10" class="bodyTab"> &nbsp; </font></td></tr>
+            <tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>
 			
 			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Classic Mode: </font>Turn ON, <font color="#dd0"> SW(B5) </font> (Disables character switching during rounds, disable Complete Mode)</td></tr>
 			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b5.png"> <img src="dip-b5.png" height="300"></a> </img></td></tr>				
