--- a/download.html
+++ b/download.html
@@ -539,10 +539,11 @@ color:#fdf7a8;
 		 <tr><td colspan="10" class="bodyTab">- Blanka - Extra Hit to Strong Punch. </td></tr> <br>		
 		 <tr><td colspan="10" class="bodyTab">- Guile - Vertical Sonic Boom with more angle. </td></tr> <br>		
 		 <tr><td colspan="10" class="bodyTab">- Chun-Li - Spinning Bird Kick - acerto Extra Hit when lifting the legs up. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Chun-Li - Double Kick fix bug transform in Kikouken. </td></tr> <br>	
 		 <tr><td colspan="10" class="bodyTab">- Zanguief - Quick lariat going further and with Extra Hit. </td></tr> <br>		
 		 <tr><td colspan="10" class="bodyTab">- Dhalsim - Extra hit for Yoga Flame. </td></tr> <br>		
 		 <tr><td colspan="10" class="bodyTab">- Dhalsim - hitbox increase for medium punch and high kick from close range. </td></tr> <br>		
-		 <tr><td colspan="10" class="bodyTab">- Balrog - hitbox increase for weak punch down. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Balrog - hitbox increase for strong punch and down ligt punch. </td></tr> <br>		
 		 <tr><td colspan="10" class="bodyTab">- Balrog - You can fly hold ← → 2 chutes. </td></tr> <br>		
 		 <tr><td colspan="10" class="bodyTab">- Vega - punch damage increase and weak strength lowered. </td></tr> <br>		
 		 <tr><td colspan="10" class="bodyTab">- Vega - Elemental Fire Claw Extra Hit for hard punching in the air. </td></tr> <br>		
