--- a/download_br.html
+++ b/download_br.html
@@ -537,10 +537,11 @@ color:#fdf7a8;
 		 <tr><td colspan="10" class="bodyTab">- Blanka - Extra Hit para Soco forte. </td></tr> <br>		
 		 <tr><td colspan="10" class="bodyTab">- Guile - Vertical Sonic Boom com mais ângulo. </td></tr> <br>		
 		 <tr><td colspan="10" class="bodyTab">- Chun-Li - Spinning Bird Kick - acerto Extra Hit ao levantar as pernas para cima. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Chun-Li - Double Kick Corrigido bug de sair Kikouken. </td></tr> <br>		
 		 <tr><td colspan="10" class="bodyTab">- Zanguief - Quick lariat indo mais longe e com Extra Hit. </td></tr> <br>		
 		 <tr><td colspan="10" class="bodyTab">- Dhalsim - Extra hit para Yoga Flame. </td></tr> <br>		
 		 <tr><td colspan="10" class="bodyTab">- Dhalsim - aumento de hitbox para soco médio e chute forte de perto. </td></tr> <br>		
-		 <tr><td colspan="10" class="bodyTab">- Balrog - aumento de hitbox para soco fraco abaixado. </td></tr> <br>		
+		 <tr><td colspan="10" class="bodyTab">- Balrog - aumento de hitbox para soco forte e soco fraco abaixado. </td></tr> <br>		
 		 <tr><td colspan="10" class="bodyTab">- Balrog - You can fly segura ← → 2 chutes. </td></tr> <br>		
 		 <tr><td colspan="10" class="bodyTab">- Vega - aumento do dano do soco e forte fraco abaixado. </td></tr> <br>		
 		 <tr><td colspan="10" class="bodyTab">- Vega - Elemental Fire Claw Extra Hit para soco forte no ar. </td></tr> <br>		
