--- a/sf2mix.html
+++ b/sf2mix.html
@@ -100,8 +100,8 @@
                 {"type":"button","text":"2","id":"y","location":"right","right":75,"top":10,"bold":true,"input_value":9},
                 {"type":"button","text":"3","id":"z","location":"right","right":5,"top":10,"bold":true,"input_value":10},
                 {"type":"dpad","location":"left","left":"50%","right":"50%","joystickInput":false,"inputValues":[4,5,6,7]},
-                {"type":"button","text":"Coin","id":"mode","location":"top","left":5,"top":-170,"fontSize":15,"block":true,"input_value":2},
-                {"type":"button","text":"Start","id":"start","location":"top","left":70,"top":-170,"fontSize":15,"block":true,"input_value":3}
+                {"type":"button","text":"Coin","id":"mode","location":"left","left":5,"top":-195,"fontSize":15,"block":true,"input_value":2},
+                {"type":"button","text":"Start","id":"start","location":"left","left":70,"top":-195,"fontSize":15,"block":true,"input_value":3}
 		]
 
         </script>
