--- a/sf2mix.html
+++ b/sf2mix.html
@@ -1,10 +1,12 @@
 <html>
  <head>
         <style>
-            body, html {
+            background-color: rgb(0,0,0);
+			body, html {
                 margin: 0;
                 padding: 0;
             }
+			body {background-color: rgb(10,10,10);}
         </style>
     </head>
     <body>
@@ -17,6 +19,7 @@
             EJS_gameName = "sf2ce";
             EJS_color = "#000000";
             EJS_startOnLoaded = true;
+			EJS_fullscreenOnLoad = true;
             EJS_pathtodata = "https://sf2mix.github.io/data/";
             EJS_gameUrl = "https://sf2mix.github.io/downloads/sf2mix.zip";
 			EJS_defaultControls = {
