--- a/select.html
+++ b/select.html
@@ -73,7 +73,7 @@ td.header2 {
             <td id="masterHeader_rptHeader_tdMid_1" class="header"><a id="masterHeader_rptHeader_Hyperlink1_1" class="header" href="characters.html">Characters</a></td>
 			
             <td id="masterHeader_rptHeader_tdMid_0" class="header"><a id="masterHeader_rptHeader_Hyperlink1_0" class="header" href="download.html">Download</a></td>   
-<!--			<td id="masterHeader_rptHeader_tdMid_0" class="header"><a id="masterHeader_rptHeader_Hyperlink1_0" class="header" href="play.html">Play Now</a></td> -->			   
+			<td id="masterHeader_rptHeader_tdMid_0" class="header"><a id="masterHeader_rptHeader_Hyperlink1_0" class="header" href="play.html">Play Now</a></td> 			   
 		   
 			
 		             
