--- a/index_br.html
+++ b/index_br.html
@@ -73,7 +73,7 @@ td.header2 {
             <td id="masterHeader_rptHeader_tdMid_0" class="header"><a id="masterHeader_rptHeader_Hyperlink1_0" class="header" href="selecao.html">Seleção</a></td>        
             <td id="masterHeader_rptHeader_tdMid_1" class="header"><a id="masterHeader_rptHeader_Hyperlink1_1" class="header" href="personagens.html">Personagens</a></td>
             <td id="masterHeader_rptHeader_tdMid_0" class="header"><a id="masterHeader_rptHeader_Hyperlink1_0" class="header" href="download_br.html">Download</a></td>  
-			<td id="masterHeader_rptHeader_tdMid_0" class="header"><a id="masterHeader_rptHeader_Hyperlink1_0" class="header" href="play.html">Play Now</a></td> 		   
+			<td id="masterHeader_rptHeader_tdMid_0" class="header"><a id="masterHeader_rptHeader_Hyperlink1_0" class="header" href="play.html">Test Now</a></td> 		   
 		   
 		             
             <td style="padding:0px"><img id="masterHeader_rptHeader_imgFoot" src="chunli.gif" height="70" ></td></tr></tbody></table>
