--- a/play.html
+++ b/play.html
@@ -16,12 +16,14 @@
         <script>
             EJS_player = "#game";
             EJS_core = "arcade";
-            EJS_gameName = "sf2ce";
+            EJS_gameName = "sf2mix";
             EJS_color = "#000000";
             EJS_startOnLoaded = true;
 			EJS_fullscreenOnLoad = true;
             EJS_pathtodata = "https://sf2mix.github.io/data/";
             EJS_gameUrl = "https://sf2mix.github.io/downloads/sf2mix.zip";
+			EJS_gameID = 1;
+			EJS_oldCores = true;
 			EJS_VirtualGamepadSettings = [
 				{"type":"button","text":"4","id":"a","location":"right","right":145,"top":80,"bold":true,"input_value":0},
                 {"type":"button","text":"5","id":"b","location":"right","right":75,"top":80,"bold":true,"input_value":8},
