--- a/play.html
+++ b/play.html
@@ -16,7 +16,7 @@
         <script>
             EJS_player = "#game";
             EJS_core = "arcade";
-            EJS_gameName = "sf2ce";
+            EJS_gameName = "sf2mix";
             EJS_color = "#000000";
             EJS_startOnLoaded = true;
 			EJS_fullscreenOnLoad = true;
