--- a/play.html
+++ b/play.html
@@ -21,7 +21,7 @@
             EJS_startOnLoaded = true;
 			EJS_fullscreenOnLoad = true;
             EJS_pathtodata = "https://sf2mix.github.io/data/";
-            EJS_gameUrl = "https://sf2mix.github.io/downloads/sf2mix.zip";
+            EJS_gameUrl = "https://sf2mix.github.io/downloads/1.3/sf2mix.zip";
 			EJS_gameID = 1;
 			EJS_oldCores = true;
 			EJS_VirtualGamepadSettings = [
