--- a/play.html
+++ b/play.html
@@ -24,7 +24,7 @@
             EJS_gameUrl = "https://sf2mix.github.io/downloads/1.3/sf2mix.zip";
 			EJS_gameID = 1;
 			EJS_oldCores = true;
-			EJS_netplayUrl = "https://www.retrogames.cc/";
+			<!-- EJS_netplayUrl = "https://www.retrogames.cc/"; -->
 			EJS_VirtualGamepadSettings = [
 				{"type":"button","text":"4","id":"a","location":"right","right":145,"top":80,"bold":true,"input_value":0},
                 {"type":"button","text":"5","id":"b","location":"right","right":75,"top":80,"bold":true,"input_value":8},
