--- a/selecao.html
+++ b/selecao.html
@@ -76,7 +76,7 @@ td.header2 {
             <td style="padding:0px"><img id="masterHeader_rptHeader_imgFoot" src="guile.gif" height="70" ></td>
 			<td id="masterHeader_rptHeader_tdMid_0" class="header"><a id="masterHeader_rptHeader_Hyperlink1_0" class="header" href="play.html">Test Now</a></td>			   
 		    
-			<td style="padding:0px"><a id="masterHeader_rptHeader_Hyperlink1_0" class="header" href="https://discord.gg/nUqV3CJx"><img src="discord.png" height="40"></td> 
+			<td style="padding:0px"><a id="masterHeader_rptHeader_Hyperlink1_0" class="header" href="https://discord.gg/EdvGtFM8zz"><img src="discord.png" height="40"></td> 
 			</tbody></table>
 <style>
     .bodyHeading  
