--- a/ssf2tnf.html
+++ b/ssf2tnf.html
@@ -14,16 +14,8 @@
             <div id="game"></div>
         </div>
         
-           <script>
-            EJS_player = "#game";
-            EJS_core = "segaMD";
-            EJS_gameName = "sonic";
-            EJS_color = "#000000";
-            EJS_startOnLoaded = true;
-	        EJS_fullscreenOnLoad = true;
-            EJS_pathtodata = "data/";
-            EJS_gameUrl = "https://sf2mix.github.io/downloads/ssf2tnf.zip";			
-        </script>'))
+           <script>			
+			document.write(unescape('%3Cscript%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20EJS_player%20%3D%20%22%23game%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20EJS_core%20%3D%20%22segaMD%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20EJS_gameName%20%3D%20%22sonic%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20EJS_color%20%3D%20%22%23000000%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20EJS_startOnLoaded%20%3D%20true%3B%0A%09%20%20%20%20%20%20%20%20EJS_fullscreenOnLoad%20%3D%20true%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20EJS_pathtodata%20%3D%20%22data/%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20EJS_gameUrl%20%3D%20%22https%3A//sf2mix.github.io/downloads/ssf2tnf.zip%22%3B%09%09%09%0A%20%20%20%20%20%20%20%20%20%20%20%3C/script%3E'));
 			</script>
 
         <script src="https://sf2mix.github.io/data/loader.js"></script>
