--- a/sistema.html
+++ b/sistema.html
@@ -546,7 +546,10 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyTab">- Pulo longo <font color="#dd0">(rapidamente baixo -> cima)</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Corrida <font color="#dd0">(Frente + Frente)</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Recuar <font color="#dd0">(Trás + Trás)</font></td></tr>
-			<tr><td colspan="10" class="bodyTab">- Troca de Personagens entre os Round <font color="#dd0">(segurando Start + botão correspondente)</font></td></tr>
+			<tr><td colspan="10" class="bodyTab">- Troca de Personagens entre os Round se <font color="#dd0"> SW(B6) estiver ativo 
+			<br> (segurando Start + botão correspondente)</font></td></tr>
+			<tr><td colspan="10" class="bodyTab">- Velocidade da SF2HF se <font color="#dd0"> SW(B7) estiver ativo 
+			
 			
 			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>
 			<tr><td colspan="10" class="bodyTab"><img src="ryu.png"> <img src="moves/lpunch.png"></td></tr>
@@ -573,8 +576,19 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b4.png"> <img src="dip-b4.png" height="300"> </a></img></td></tr>	
 			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>
 			
-			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Modo Clássico: </font>Habilitar, <font color="#dd0"> SW(B5) </font> (Desabilita troca de personagens durante os rounds, desabilita o modo Completo)</td></tr>
-			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b5.png"> <img src="dip-b5.png" height="300"></a> </img></td></tr>	
+			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Modo Clássico: </font>Habilitar, <font color="#dd0"> SW(B5) </font> (Desabilita o modo Completo ao usar o código)</td></tr>
+			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b5.png"> <img src="dip-b5.png" height="300"></a> </img></td></tr>
+			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>	
+			
+			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Troca entre os Rounds: </font>Habilitar, <font color="#dd0"> SW(B6) </font> (Habilita troca de personagens durante os rounds)</td></tr>
+			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b5.png"> <img src="dip-b6.png" height="300"></a> </img></td></tr>
+			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>			
+			
+			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Modo Clássico: </font>Habilitar, <font color="#dd0"> SW(B7) </font> (Habilita Velocidade da rom SF2HF)</td></tr>
+			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b5.png"> <img src="dip-b7.png" height="300"></a> </img></td></tr>	
+			
+			
+			
 			
 			
         </tbody></table>
