--- a/system.html
+++ b/system.html
@@ -547,8 +547,11 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyTab">- Long Jump <font color="#dd0"> (quickly down -> up)</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Run <font color="#dd0">(forward + forward)</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Backstep <font color="#dd0">(back + back)</font> </td></tr>
-			<tr><td colspan="10" class="bodyTab">- Character Swapping between Rounds <font color="#dd0">(by holding Start + corresponding button)</font></td></tr>
-						
+			<tr><td colspan="10" class="bodyTab">- Character Swapping between Rounds if <font color="#dd0"> SW(B6) Active 
+			<br>(by holding Start + corresponding button)</font></td></tr>
+			<tr><td colspan="10" class="bodyTab">- SF2HF rom speed if <font color="#dd0"> SW(B7) Active 
+				
+			
 			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>
 			<tr><td colspan="10" class="bodyTab"><img src="ryu.png"> <img src="moves/lpunch.png"></td></tr>
 			<tr><td colspan="10" class="bodyTab"><img src="honda.png"> <img src="moves/mpunch.png"></td></tr>
@@ -574,8 +577,16 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b4.png"> <img src="dip-b4.png" height="300"> </a></img></td></tr>
             <tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>
 			
-			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Classic Mode: </font>Turn ON, <font color="#dd0"> SW(B5) </font> (Disables character switching during rounds, disable Complete Mode)</td></tr>
-			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b5.png"> <img src="dip-b5.png" height="300"></a> </img></td></tr>				
+			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Classic Mode: </font>Turn ON, <font color="#dd0"> SW(B5) </font> (disable Complete Mode with code)</td></tr>
+			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b5.png"> <img src="dip-b5.png" height="300"></a> </img></td></tr>
+			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>	
+	
+			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Classic Mode: </font>Turn ON, <font color="#dd0"> SW(B6) </font> (Enable character switching during rounds)</td></tr>
+			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b5.png"> <img src="dip-b6.png" height="300"></a> </img></td></tr>			
+			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>	
+	
+			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> SF2HF ROM SPEED: </font>Turn ON, <font color="#dd0"> SW(B7) </font> (Enable SF2HF Speed)</td></tr>
+			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b5.png"> <img src="dip-b7.png" height="300"></a> </img></td></tr>				
 	
 			
         </tbody></table>
